2013-04-15  ChunEon Park
        * Evas: If an object goes to be hidden without replacing the cur/prev
        state info, the object context can be corrupted at the next show time.
        Now it replaces the cur/prev in that rare case.

2013-04-15 Tom Hacohen
        * Evas textblock: Fixed a bug with deletion of ranges that end just
	before a visual format.

2013-04-14  Jiyoun Park

        * Evas: fix gif bug related with scale down decode.

2013-04-14  Jiyoun Park

        * Evas: fix gif decoding bug related with background color.

2013-04-14  ChunEon Park

        * Evas: Don't update evas update area by the clipper if the image obj visible is changed.

2013-04-14  Carsten Haitzler (The Rasterman)

        * Evas: Work around new intel Mesa/xorg bug where alpha
        channel in NON-ARGB windows is not filled in with 0xff even if all the
        code does things right.

2013-04-13  ChunEon Park

        * Evas: Don't be crashed even if the map image size is 0.

2013-04-13  Jihoon Kim

        * Ecore_IMF: Add ecore_imf_input_panel_hide () API
        * Ecore_IMF: Add ecore_imf_context_input_panel_event_callback_call, clear API

2013-04-10  Rafael Antognolli

        * Ecore: Add support for double and triple click on Wayland.

2013-04-10 Tom Hacohen (Tasn) Yakov Goldberg
        * Evas textblock : Added split cursor for BiDi text

2013-04-10  WooHyun Jung

        * Edje: When cursor is located to each edge, entry now doesn't grab events for cursor movement.

2013-04-10  Carsten Haitzler (The Rasterman)

        * Evas: Add glx buffer age support for automatic partial
          redraw in glx.
        * Evas: Support GLX_MESA_release_buffers extension to release
          unused aux buffers.

2013-04-09  Jérémy Zurcher (jeyzu)

        * Eina: Add eina_inlist_first and eina_inlist_last

2013-04-08  Tom Hacohen

        * Evas font: Fix a bug with cluster size calculation with texts ending
	with ligatures.

2013-04-08  Carsten Haitzler (The Rasterman)
